<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nicholasflod.slutprojekt.NyttInlagg_ValjBild"
    android:background="@drawable/bakgrundminiraknare">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nyttInlaggBild"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/nyttInlaggTillbaka" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nyttInlagg_Tillbakaknapp"
        android:id="@+id/nyttInlaggTillbaka"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="NyttInlaggTillbaka"
        android:nestedScrollingEnabled="false"
        android:background="#64ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nyttInlagg_Valjbildknapp"
        android:id="@+id/nyttInlaggValjBild"
        android:onClick="NyttInlaggValjBild"
        android:layout_alignTop="@+id/nyttInlaggTillbaka"
        android:layout_centerHorizontal="true"
        android:background="#64ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nyttInlagg_Nasta"
        android:id="@+id/nyttInlaggNasta"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="NyttInlaggNasta"
        android:background="#64ffffff" />

</RelativeLayout>
